genium/src/test/resources/smoke/errors/output/swift/ErrorsExtensions.swift
extension Errors.InternalError : Error {
}

extension SomeTypeCollectionError : Error {
}
